# education

./: .env.example  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: a731333f9178_create_users_and_notes_tables.py
app/database/: __init__.py  db.py
app/database/crud/: notes.py
app/database/models/: __init__.py  notes.py  users.py
app/routes/: __init__.py  notes.py
app/schemas/: notes.py
backend/app/: main.py
backend/app/api/: auth.py  notes.py
backend/app/core/: config.py  database.py  exceptions.py  security.py
backend/app/dependencies/: auth.py  database.py
backend/app/models/: __init__.py  note.py  user.py
backend/app/repositories/: note.py  user.py
backend/app/schemas/: note.py  user.py
backend/app/services/: note.py  user.py
docs/: ARCHITECTURE.md
frontend/src/: App.jsx
frontend/src/api/: notes.js
frontend/src/components/: Header.jsx  LoginForm.jsx  NoteCard.jsx  NotesList.jsx
